--- a/css/full.css
+++ b/css/full.css
@@ -11,7 +11,7 @@ body {
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
 
 .full {
-    background: url('Sageserver.github.io/minecraft_wallpaper_by_stevie10-d659xhq.jpg') no-repeat center center fixed;
+    background: url('/minecraft_wallpaper_by_stevie10-d659xhq.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
